--- a/app/styles/assets/variables.less
+++ b/app/styles/assets/variables.less
@@ -7,7 +7,7 @@
 //
 
 // ------------------------------------ //
-// COLORS
+// #COLORS
 // ------------------------------------ //
 
 @gray-soft-dark: lighten(#000, 26%);
@@ -44,7 +44,7 @@
 */
 
 // ------------------------------------ //
-// TOOLBAR
+// #TOOLBAR
 // ------------------------------------ //
 
 @toolbar-height: 30px;
@@ -52,7 +52,7 @@
 
 
 // ------------------------------------ //
-// DASHBOARD
+// #DASHBOARD
 // ------------------------------------ //
 
 @annotation-sidebar-coll-width: 10px;
@@ -61,12 +61,13 @@
 
 
 // ------------------------------------ //
-// ITEM GEOMETRY
+// #ITEM-GEOMETRY
 // ------------------------------------ //
 @item-height: 28px;
 
+
 // ------------------------------------ //
-// TRIPLE COMPOSER GEOMETRY
+// #TRIPLE-COMPOSER-GEOMETRY
 // ------------------------------------ //
 
 @triplecomposer-height: 25px;
@@ -75,12 +76,12 @@
 
 
 // ------------------------------------ //
-// Z-INDEX
+// #Z-INDEX
 // ------------------------------------ //
 
 // Attention: here we define only z-index for highlevel components
 // Z-indexes for nested elements (inside components) are defined inside each file and have
-// lower values
+// lower values as they should be relative
 
 @zindex-pnd-base: 100000000; // Increment for pnd-wrap z-index value
 
@@ -98,7 +99,14 @@
 
 
 // ------------------------------------ //
-// ANIMATIONS VARIABLES
+// #RESOURCE-PANEL
+// ------------------------------------ //
+@resource-panel-width: 400px;
+@resource-panel-height: 250px;
+
+
+// ------------------------------------ //
+// #ANIMATIONS-VARIABLES
 // ------------------------------------ //
 
 @animation-fast-duration: .15s;
